--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "airtable": "^0.11.6",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "joi": "^17.7.0",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
