--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "airtable": "^0.11.6",
+    "crypto": "^1.0.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "joi": "^17.7.0",
     "next": "13.0.5",
+    "next-auth": "^4.18.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
