--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
+    "react-tooltip": "^5.13.0",
     "recoil": "^0.7.6",
     "swr": "^1.3.0",
     "typescript": "4.9.3",
