--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "@hookform/resolvers": "^2.9.10",
+    "@stripe/stripe-js": "^1.53.0",
     "@supabase/auth-helpers-nextjs": "^0.5.2",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.2.3",
@@ -29,6 +30,7 @@
     "react-hook-form": "^7.41.0",
     "react-tooltip": "^5.13.0",
     "recoil": "^0.7.6",
+    "stripe": "^12.5.0",
     "swr": "^1.3.0",
     "typescript": "4.9.3",
     "yup": "^0.32.11"
