--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/stripe": "^8.0.417",
     "airtable": "^0.11.6",
     "crypto": "^1.0.1",
     "eslint": "8.28.0",
@@ -30,7 +31,7 @@
     "react-hook-form": "^7.41.0",
     "react-tooltip": "^5.13.0",
     "recoil": "^0.7.6",
-    "stripe": "^12.5.0",
+    "stripe": "^12.6.0",
     "swr": "^1.3.0",
     "typescript": "4.9.3",
     "yup": "^0.32.11"
