--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "joi": "^17.7.0",
+    "micro": "^10.0.1",
     "next": "13.0.5",
     "next-auth": "^4.18.10",
     "react": "18.2.0",
