Implemented cloudinary upload for images, added logic to edit image for offer

--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
     "@heroicons/react": "^2.0.13",
     "@hookform/resolvers": "^2.9.10",
     "@stripe/stripe-js": "^1.53.0",
-    "@supabase/auth-helpers-nextjs": "^0.5.2",
-    "@supabase/auth-helpers-react": "^0.3.1",
-    "@supabase/supabase-js": "^2.2.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@types/stripe": "^8.0.417",
     "airtable": "^0.11.6",
+    "cloudinary": "^1.37.1",
     "crypto": "^1.0.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
