--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.0.13",
     "@hookform/resolvers": "^2.9.10",
     "@stripe/stripe-js": "^1.53.0",
+    "@supabase/supabase-js": "^2.26.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -25,6 +26,7 @@
     "micro": "^10.0.1",
     "next": "13.0.5",
     "next-auth": "^4.18.10",
+    "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
